# JhonWick

./: .gitIgnore  README.md  main.py  pyproject.toml  roadmap.md
.devcontainer/: devcontainer.json
backend/: api.py
demo/: dashboard.py  mind.py
frontend/: index.html  script.js  style.css
tests/: test.py
utils/: chatbot.py  demo.py  extract_image.py  extract_text.py  fewshotmcq.py  fewshotnumerical.py  fewshotproof.py  flashcard.py  gemini.py  gemini_core.py  mcq.py  mindmap.py  prompt_agent.py  summary.py  test.py
